# workout-planner

./: .gitignore  add_new_plan.py  cron_trigger.py  email_utils.py  emailer.py  feedback_app.py  generate_workout_json.py  llm.py  notion_integration.py  prompts.py  pyproject.toml  render.yaml  requirements.txt
templates/: feedback.html
workout_plans/: current_plan.json  current_plan.txt  current_plan_metadata.json  metadata.json  plan_164c4f6f_metadata.json  plan_3f226b53_metadata.json  plan_d6d2fe0d_metadata.json
